Ajout de l'agrégateur de documentation avec les json associés